// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Shellbar /> create shellbar 1`] = `
<div
  className="fd-shellbar"
>
  <div
    className="fd-shellbar__group fd-shellbar__group--start"
  >
    <a
      className="fd-shellbar__logo"
    >
      <img
        alt="SAP"
        src="//unpkg.com/fundamental-styles/dist/images/sap-logo.png"
      />
    </a>
    <div
      className="fd-shellbar__product"
    >
      <span
        className="fd-shellbar__title"
      >
        Corporate Portal
      </span>
    </div>
  </div>
  <div
    className="fd-shellbar__group fd-shellbar__group--end"
  >
    <div
      className="fd-shellbar__actions"
    >
      <div
        className="fd-shellbar__action fd-shellbar__action--show-always"
      >
        <div
          className="fd-user-menu"
        >
          <div
            className="fd-popover"
          >
            <div
              onFocus={[Function]}
              onMouseDown={[Function]}
              onTouchStart={[Function]}
            >
              <div
                className="fd-popover__control"
              >
                <span
                  className="fd-identifier--xs fd-identifier--circle fd-has-background-color-accent-8"
                  onClick={[Function]}
                  role=""
                >
                  JS
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Shellbar /> create shellbar 2`] = `
<div
  className="fd-shellbar blue"
>
  <div
    className="fd-shellbar__group fd-shellbar__group--start"
  >
    <a
      className="fd-shellbar__logo"
    >
      <img
        alt="SAP"
        src="//unpkg.com/fundamental-styles/dist/images/sap-logo.png"
      />
    </a>
    <div
      className="fd-shellbar__product"
    >
      <span
        className="fd-shellbar__title"
      >
        Corporate Portal
      </span>
    </div>
  </div>
  <div
    className="fd-shellbar__group fd-shellbar__group--end"
  >
    <div
      className="fd-shellbar__actions"
    >
      <div
        className="fd-shellbar__action fd-shellbar__action--show-always"
      >
        <div
          className="fd-user-menu"
        >
          <div
            className="fd-popover"
          >
            <div
              onFocus={[Function]}
              onMouseDown={[Function]}
              onTouchStart={[Function]}
            >
              <div
                className="fd-popover__control"
              >
                <span
                  className="fd-identifier--xs fd-identifier--circle fd-has-background-color-accent-8"
                  onClick={[Function]}
                  role=""
                >
                  JS
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Shellbar /> create shellbar 3`] = `
<div
  className="fd-shellbar"
>
  <div
    className="fd-shellbar__group fd-shellbar__group--start"
  >
    <a
      className="fd-shellbar__logo"
    >
      <img
        alt="SAP"
        src="//unpkg.com/fundamental-styles/dist/images/sap-logo.png"
      />
    </a>
    <div
      className="fd-shellbar__product"
    >
      <div
        className="fd-product-menu"
      >
        <div
          className="fd-popover"
        >
          <div
            onFocus={[Function]}
            onMouseDown={[Function]}
            onTouchStart={[Function]}
          >
            <div
              className="fd-popover__control"
            >
              <button
                className="fd-product-menu__control"
                onClick={[Function]}
              >
                <span
                  className="fd-shellbar__title fd-product-menu__title"
                >
                  Corporate Portal
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="fd-shellbar__subtitle"
    >
      Subtitle
    </div>
  </div>
  <div
    className="fd-shellbar__group fd-shellbar__group--middle"
  >
    <img
      alt="CoPilot"
      height="30"
      src="//unpkg.com/fundamental-styles/dist/images/copilot.png"
      width="30"
    />
  </div>
  <div
    className="fd-shellbar__group fd-shellbar__group--end"
  >
    <div
      className="fd-shellbar__actions"
    >
      <div
        className="fd-shellbar__action fd-shellbar__action--collapsible"
      >
        <div
          className="fd-search-input fd-search-input--closed"
        >
          <div
            className="fd-popover"
          >
            <div
              className="fd-popover__control fd-search-input__control"
            >
              <button
                aria-expanded={false}
                aria-haspopup="true"
                className="sap-icon--search fd-button--shell"
                onClick={[Function]}
              />
              <div
                aria-hidden={true}
                className="fd-search-input__closedcontrol"
              >
                <div
                  aria-expanded={false}
                  aria-haspopup="true"
                  className="fd-search-input__controlinput"
                >
                  <input
                    className="fd-input"
                    onChange={[Function]}
                    onClick={[Function]}
                    onKeyPress={[Function]}
                    placeholder="Enter a fruit"
                    type="text"
                    value=""
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="fd-shellbar__action fd-shellbar__action--collapsible"
      >
        <div
          className="fd-popover"
        >
          <div
            onFocus={[Function]}
            onMouseDown={[Function]}
            onTouchStart={[Function]}
          >
            <div
              className="fd-popover__control"
            >
              <button
                aria-label="Settings"
                className=" fd-button--shell sap-icon--settings"
                onClick={[Function]}
              >
                <span
                  aria-label="Unread count"
                  className="fd-counter fd-counter--notification"
                >
                  5
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        className="fd-popover"
      >
        <div
          onFocus={[Function]}
          onMouseDown={[Function]}
          onTouchStart={[Function]}
        >
          <div
            className="fd-popover__control"
          >
            <div
              className="fd-shellbar__action fd-shellbar__action--collapsible"
              onClick={[Function]}
            >
              <button
                aria-label="Notifications"
                className=" fd-button--shell sap-icon--bell"
              >
                <span
                  aria-label="Unread count"
                  className="fd-counter fd-counter--notification"
                >
                  2
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        className="fd-shellbar__action fd-shellbar__action--collapse"
      >
        <div
          className="fd-shellbar-collapse"
        >
          <div
            className="fd-popover"
          >
            <div
              onFocus={[Function]}
              onMouseDown={[Function]}
              onTouchStart={[Function]}
            >
              <div
                className="fd-popover__control"
              >
                <div
                  className="fd-shellbar-collapse--control"
                  onClick={[Function]}
                  role="button"
                >
                  <button
                    className=" fd-button--shell sap-icon--overflow"
                  >
                    <span
                      aria-label="Unread count"
                      className="fd-counter fd-counter--notification"
                    >
                       
                      7
                       
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="fd-shellbar__action fd-shellbar__action--show-always"
      >
        <div
          className="fd-user-menu"
        >
          <div
            className="fd-popover"
          >
            <div
              onFocus={[Function]}
              onMouseDown={[Function]}
              onTouchStart={[Function]}
            >
              <div
                className="fd-popover__control"
              >
                <span
                  className="fd-identifier--xs fd-identifier--circle fd-has-background-color-accent-8"
                  onClick={[Function]}
                  role=""
                >
                  JS
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="fd-shellbar__action fd-shellbar__action--collapsible"
      >
        <div
          className="fd-product-switcher"
        >
          <div
            className="fd-popover"
          >
            <div
              onFocus={[Function]}
              onMouseDown={[Function]}
              onTouchStart={[Function]}
            >
              <div
                className="fd-popover__control"
              >
                <button
                  className=" fd-button--shell sap-icon--grid"
                  onClick={[Function]}
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Shellbar /> create shellbar 4`] = `
<div
  className="fd-shellbar"
>
  <div
    className="fd-shellbar__group fd-shellbar__group--start"
  >
    <a
      className="fd-shellbar__logo"
    >
      <img
        alt="SAP"
        src="//unpkg.com/fundamental-styles/dist/images/sap-logo.png"
      />
    </a>
    <div
      className="fd-shellbar__product"
    >
      <div
        className="fd-product-menu"
      >
        <div
          className="fd-popover"
        >
          <div
            onFocus={[Function]}
            onMouseDown={[Function]}
            onTouchStart={[Function]}
          >
            <div
              className="fd-popover__control"
            >
              <button
                className="fd-product-menu__control"
                onClick={[Function]}
              >
                <span
                  className="fd-shellbar__title fd-product-menu__title"
                >
                  Corporate Portal
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="fd-shellbar__subtitle"
    >
      Subtitle
    </div>
  </div>
  <div
    className="fd-shellbar__group fd-shellbar__group--middle"
  >
    <img
      alt="CoPilot"
      height="30"
      src="//unpkg.com/fundamental-styles/dist/images/copilot.png"
      width="30"
    />
  </div>
  <div
    className="fd-shellbar__group fd-shellbar__group--end"
  >
    <div
      className="fd-shellbar__actions"
    >
      <div
        className="fd-shellbar__action fd-shellbar__action--collapsible"
      >
        <div
          className="fd-search-input fd-search-input--closed"
        >
          <div
            className="fd-popover"
          >
            <div
              className="fd-popover__control fd-search-input__control"
            >
              <button
                aria-expanded={false}
                aria-haspopup="true"
                className="sap-icon--search fd-button--shell"
                onClick={[Function]}
              />
              <div
                aria-hidden={true}
                className="fd-search-input__closedcontrol"
              >
                <div
                  aria-expanded={false}
                  aria-haspopup="true"
                  className="fd-search-input__controlinput"
                >
                  <input
                    className="fd-input"
                    onChange={[Function]}
                    onClick={[Function]}
                    onKeyPress={[Function]}
                    placeholder="Enter a fruit"
                    type="text"
                    value=""
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="fd-shellbar__action fd-shellbar__action--collapsible"
      >
        <div
          className="fd-popover"
        >
          <div
            onFocus={[Function]}
            onMouseDown={[Function]}
            onTouchStart={[Function]}
          >
            <div
              className="fd-popover__control"
            >
              <button
                aria-label="Settings"
                className=" fd-button--shell sap-icon--settings"
                onClick={[Function]}
              >
                <span
                  aria-label="Unread count"
                  className="fd-counter fd-counter--notification"
                >
                  5
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        className="fd-popover"
      >
        <div
          onFocus={[Function]}
          onMouseDown={[Function]}
          onTouchStart={[Function]}
        >
          <div
            className="fd-popover__control"
          >
            <div
              className="fd-shellbar__action fd-shellbar__action--collapsible"
              onClick={[Function]}
            >
              <button
                aria-label="Notifications"
                className=" fd-button--shell sap-icon--bell"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        className="fd-shellbar__action fd-shellbar__action--collapse"
      >
        <div
          className="fd-shellbar-collapse"
        >
          <div
            className="fd-popover"
          >
            <div
              onFocus={[Function]}
              onMouseDown={[Function]}
              onTouchStart={[Function]}
            >
              <div
                className="fd-popover__control"
              >
                <div
                  className="fd-shellbar-collapse--control"
                  onClick={[Function]}
                  role="button"
                >
                  <button
                    className=" fd-button--shell sap-icon--overflow"
                  >
                    <span
                      aria-label="Unread count"
                      className="fd-counter fd-counter--notification"
                    >
                       
                      5
                       
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="fd-shellbar__action fd-shellbar__action--show-always"
      >
        <div
          className="fd-user-menu"
        >
          <div
            className="fd-popover"
          >
            <div
              onFocus={[Function]}
              onMouseDown={[Function]}
              onTouchStart={[Function]}
            >
              <div
                className="fd-popover__control"
              >
                <span
                  className="fd-identifier--xs fd-identifier--circle fd-has-background-color-accent-8"
                  onClick={[Function]}
                  role=""
                >
                  JS
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="fd-shellbar__action fd-shellbar__action--collapsible"
      >
        <div
          className="fd-product-switcher"
        >
          <div
            className="fd-popover"
          >
            <div
              onFocus={[Function]}
              onMouseDown={[Function]}
              onTouchStart={[Function]}
            >
              <div
                className="fd-popover__control"
              >
                <button
                  className=" fd-button--shell sap-icon--grid"
                  onClick={[Function]}
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Shellbar /> create shellbar 5`] = `
<div
  className="fd-shellbar"
>
  <div
    className="fd-shellbar__group fd-shellbar__group--start"
  >
    <a
      className="fd-shellbar__logo"
    >
      <img
        alt="SAP"
        src="//unpkg.com/fundamental-styles/dist/images/sap-logo.png"
      />
    </a>
    <div
      className="fd-shellbar__product"
    >
      <div
        className="fd-product-menu"
      >
        <div
          className="fd-popover"
        >
          <div
            onFocus={[Function]}
            onMouseDown={[Function]}
            onTouchStart={[Function]}
          >
            <div
              className="fd-popover__control"
            >
              <button
                className="fd-product-menu__control"
                onClick={[Function]}
              >
                <span
                  className="fd-shellbar__title fd-product-menu__title"
                >
                  Corporate Portal
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="fd-shellbar__subtitle"
    >
      Subtitle
    </div>
  </div>
  <div
    className="fd-shellbar__group fd-shellbar__group--middle"
  >
    <img
      alt="CoPilot"
      height="30"
      src="//unpkg.com/fundamental-styles/dist/images/copilot.png"
      width="30"
    />
  </div>
  <div
    className="fd-shellbar__group fd-shellbar__group--end"
  >
    <div
      className="fd-shellbar__actions"
    >
      <div
        className="fd-shellbar__action fd-shellbar__action--collapsible"
      >
        <div
          className="fd-search-input fd-search-input--closed"
        >
          <div
            className="fd-popover"
          >
            <div
              className="fd-popover__control fd-search-input__control"
            >
              <button
                aria-expanded={false}
                aria-haspopup="true"
                className="sap-icon--search fd-button--shell"
                onClick={[Function]}
              />
              <div
                aria-hidden={true}
                className="fd-search-input__closedcontrol"
              >
                <div
                  aria-expanded={false}
                  aria-haspopup="true"
                  className="fd-search-input__controlinput"
                >
                  <input
                    className="fd-input"
                    onChange={[Function]}
                    onClick={[Function]}
                    onKeyPress={[Function]}
                    placeholder="Enter a fruit"
                    type="text"
                    value=""
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="fd-shellbar__action fd-shellbar__action--collapsible"
      >
        <button
          aria-label="Settings"
          className=" fd-button--shell sap-icon--settings"
          onClick={[Function]}
        >
          <span
            aria-label="Unread count"
            className="fd-counter fd-counter--notification"
          >
            5
          </span>
        </button>
      </div>
      <div
        className="fd-popover"
      >
        <div
          onFocus={[Function]}
          onMouseDown={[Function]}
          onTouchStart={[Function]}
        >
          <div
            className="fd-popover__control"
          >
            <div
              className="fd-shellbar__action fd-shellbar__action--collapsible"
              onClick={[Function]}
            >
              <button
                aria-label="Notifications"
                className=" fd-button--shell sap-icon--bell"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        className="fd-shellbar__action fd-shellbar__action--collapse"
      >
        <div
          className="fd-shellbar-collapse"
        >
          <div
            className="fd-popover"
          >
            <div
              onFocus={[Function]}
              onMouseDown={[Function]}
              onTouchStart={[Function]}
            >
              <div
                className="fd-popover__control"
              >
                <div
                  className="fd-shellbar-collapse--control"
                  onClick={[Function]}
                  role="button"
                >
                  <button
                    className=" fd-button--shell sap-icon--overflow"
                  >
                    <span
                      aria-label="Unread count"
                      className="fd-counter fd-counter--notification"
                    >
                       
                      5
                       
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="fd-shellbar__action fd-shellbar__action--show-always"
      >
        <div
          className="fd-user-menu"
        >
          <div
            className="fd-popover"
          >
            <div
              onFocus={[Function]}
              onMouseDown={[Function]}
              onTouchStart={[Function]}
            >
              <div
                className="fd-popover__control"
              >
                <span
                  className="fd-identifier--xs fd-identifier--circle fd-has-background-color-accent-8"
                  onClick={[Function]}
                  role=""
                >
                  JS
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="fd-shellbar__action fd-shellbar__action--collapsible"
      >
        <div
          className="fd-product-switcher"
        >
          <div
            className="fd-popover"
          >
            <div
              onFocus={[Function]}
              onMouseDown={[Function]}
              onTouchStart={[Function]}
            >
              <div
                className="fd-popover__control"
              >
                <button
                  className=" fd-button--shell sap-icon--grid"
                  onClick={[Function]}
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Shellbar /> create shellbar 6`] = `
<div
  className="fd-shellbar"
>
  <div
    className="fd-shellbar__group fd-shellbar__group--start"
  >
    <a
      className="fd-shellbar__logo"
    >
      <img
        alt="SAP"
        src="//unpkg.com/fundamental-styles/dist/images/sap-logo.png"
      />
    </a>
    <div
      className="fd-shellbar__product"
    >
      <div
        className="fd-product-menu"
      >
        <div
          className="fd-popover"
        >
          <div
            onFocus={[Function]}
            onMouseDown={[Function]}
            onTouchStart={[Function]}
          >
            <div
              className="fd-popover__control"
            >
              <button
                className="fd-product-menu__control"
                onClick={[Function]}
              >
                <span
                  className="fd-shellbar__title fd-product-menu__title"
                >
                  Corporate Portal
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="fd-shellbar__subtitle"
    >
      Subtitle
    </div>
  </div>
  <div
    className="fd-shellbar__group fd-shellbar__group--middle"
  >
    <img
      alt="CoPilot"
      height="30"
      src="//unpkg.com/fundamental-styles/dist/images/copilot.png"
      width="30"
    />
  </div>
  <div
    className="fd-shellbar__group fd-shellbar__group--end"
  >
    <div
      className="fd-shellbar__actions"
    >
      <div
        className="fd-shellbar__action fd-shellbar__action--collapsible"
      >
        <div
          className="fd-search-input fd-search-input--closed"
        >
          <div
            className="fd-popover"
          >
            <div
              className="fd-popover__control fd-search-input__control"
            >
              <button
                aria-expanded={false}
                aria-haspopup="true"
                className="sap-icon--search fd-button--shell"
                onClick={[Function]}
              />
              <div
                aria-hidden={true}
                className="fd-search-input__closedcontrol"
              >
                <div
                  aria-expanded={false}
                  aria-haspopup="true"
                  className="fd-search-input__controlinput"
                >
                  <input
                    className="fd-input"
                    onChange={[Function]}
                    onClick={[Function]}
                    onKeyPress={[Function]}
                    placeholder="Enter a fruit"
                    type="text"
                    value=""
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="fd-shellbar__action fd-shellbar__action--collapsible"
      >
        <div
          className="fd-popover"
        >
          <div
            onFocus={[Function]}
            onMouseDown={[Function]}
            onTouchStart={[Function]}
          >
            <div
              className="fd-popover__control"
            >
              <button
                aria-label="Settings"
                className=" fd-button--shell sap-icon--settings"
                onClick={[Function]}
              >
                <span
                  aria-label="Unread count"
                  className="fd-counter fd-counter--notification"
                >
                  5
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        className="fd-shellbar__action fd-shellbar__action--collapsible"
      >
        <button
          aria-label="Notifications"
          className=" fd-button--shell sap-icon--bell"
          onClick={[Function]}
        >
          <span
            aria-label="Unread count"
            className="fd-counter fd-counter--notification"
          >
            2
          </span>
        </button>
      </div>
      <div
        className="fd-shellbar__action fd-shellbar__action--collapse"
      >
        <div
          className="fd-shellbar-collapse"
        >
          <div
            className="fd-popover"
          >
            <div
              onFocus={[Function]}
              onMouseDown={[Function]}
              onTouchStart={[Function]}
            >
              <div
                className="fd-popover__control"
              >
                <div
                  className="fd-shellbar-collapse--control"
                  onClick={[Function]}
                  role="button"
                >
                  <button
                    className=" fd-button--shell sap-icon--overflow"
                  >
                    <span
                      aria-label="Unread count"
                      className="fd-counter fd-counter--notification"
                    >
                       
                      7
                       
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="fd-shellbar__action fd-shellbar__action--show-always"
      >
        <div
          className="fd-user-menu"
        >
          <div
            className="fd-popover"
          >
            <div
              onFocus={[Function]}
              onMouseDown={[Function]}
              onTouchStart={[Function]}
            >
              <div
                className="fd-popover__control"
              >
                <span
                  className="fd-identifier--xs fd-identifier--circle fd-identifier--thumbnail"
                  onClick={[Function]}
                  role="presentation"
                  style={
                    Object {
                      "backgroundImage": "url(//unpkg.com/fundamental-styles/dist/images/sap-logo.png)",
                    }
                  }
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="fd-shellbar__action fd-shellbar__action--collapsible"
      >
        <div
          className="fd-product-switcher"
        >
          <div
            className="fd-popover"
          >
            <div
              onFocus={[Function]}
              onMouseDown={[Function]}
              onTouchStart={[Function]}
            >
              <div
                className="fd-popover__control"
              >
                <button
                  className=" fd-button--shell sap-icon--grid"
                  onClick={[Function]}
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
